[gd_scene load_steps=3 format=3 uid="uid://b31w7s5mkuo1u"]

[ext_resource type="Script" uid="uid://bbafrylcvyr6n" path="res://demo/demo.gd" id="1_x5x6s"]
[ext_resource type="Texture2D" uid="uid://cwdtl2gnx5fs1" path="res://addons/git_describe_project_setting/icon.svg" id="2_ytiva"]

[node name="Demo" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x5x6s")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_ytiva")
expand_mode = 3

[node name="GitDescribe" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "{git describe here}"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="PlatformConfigured" type="CheckBox" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
button_mask = 0
text = "Platform configured"

[node name="RepositoryFound" type="CheckBox" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
button_mask = 0
text = "Repository found"

[node name="GitFound" type="CheckBox" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
button_mask = 0
text = "Git found"

[node name="TagFound" type="CheckBox" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
button_mask = 0
text = "Tag found"
